--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,21 +1,6 @@
-#content {
-    padding: 20px;
-    margin: 0 -8px 0 0;
-    position: relative;
-    top: -2px;
-    left: -4px;
-    background: #ddd; /*#FFC284;*/
-    box-shadow: 0 0 1px 1px black; /*#0089B2;*/
-    border-radius: 25px;
-}
-
-#shadow {
-    margin: 100px auto;
-    width: 300px;
-    position: relative;
-    background: #aaa; /*#0089B2;*/
-    box-shadow: 0 0 2px 2px #aaa; /*#0089B2;*/
-    border-radius: 20px;
+h1 {
+    margin: 20px 0;
+    font-size: 2em;
 }
 
 h2 {
@@ -32,9 +17,8 @@ h4 {
 }
 
 p {
-    margin: 10px;
-    font-size: 12px;
-    text-align: center;
+    text-indent: 30px;
+    margin: 20px 0;
 }
 
 a {
@@ -124,91 +108,7 @@ iframe {
     overflow: hidden;
 }
 
-#intro {
 
-}
-
-#form {
-    display: none;
-}
-
-#form input, #form label {
-    display: inline-block;
-    width: 125px;
-    border-radius: 3px;
-}
-#form label {
-    position: relative;
-    padding: 5px 4px;
-    margin: 5px 8px 5px 0px;
-    background: white; /*#3CD1FF;*/
-}
-#form label:hover {
-    background: #eee; /*#FF9010;*/
-}
-#form .label-shadow {
-    width: 129px;
-    display: inline-block;
-    background: #aaa; /*#0089B2;*/
-    height: 25px;
-    position: relative;
-    margin: 0 20px -25px 2px;
-    top: 8px;
-    border-radius: 3px;
-    box-shadow: 0 0 1px 1px #aaa; /*#0089B2;*/
-}
-#form .full-width {
-    width:  261px;
-}
-#form .label-shadow.full-width {
-    width:  265px;
-}
-#form textarea.full-width {
-    width:  270px;
-}
-#leave_message {
-    cursor: pointer;
-}
-#leave_message:active {
-    top: 3px;
-}
-#guest_message {
-    display: none;
-}
-#form input, #form select {
-    margin-right: -20px;
-    height: 27px;
-    position: relative;
-    padding: 4px;
-    font-size: 16px;
-    border: 0px;
-}
-#form input:focus, #form select:focus {
-    box-shadow: 0 0 3px 3px #ccc inset;
-}
-#form input[type='checkbox']:focus {
-    box-shadow: none;
-}
-
-#form input[type='checkbox'] {
-    margin: -3px -20px 0 0;
-    width: 27px;
-    top: 8px;
-    height: 27px;
-}
-
-#epilogue {
-    display: none;
-}
-
-iframe {
-    zoom: 1;
-}
-
-#more {
-    text-align: center;
-    margin: 20px;
-}
 
 .vertical-center {
     /* Fallback for vh unit */
