--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -22,7 +22,7 @@ time, mark, audio, video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    font-family: georgia;
+    font-family: helvetica;
     color: black; /*#B25A00;*/
     text-shadow: 1px 1px #ccc; /*#923A00;*/
 }
@@ -34,7 +34,6 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
     background: white; /*#0089B2;*/
-    zoom: 1.6;
 }
 ol, ul {
     list-style: none;
