--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,6 +30,10 @@ a {
     text-shadow: 1px 1px #ccc; /*#FF8000;*/
 }
 
+a.basic-link {
+    color: #8855aa;
+}
+
 a:hover {
     text-shadow: 1px 1px white;
     cursor: pointer;
